# 2020

EclipTest/: .cproject  .gitignore  .project  AndroidManifest.xml
EclipTest/jni/: Android.mk  Application.mk  accompany_decoder.cpp  accompany_decoder.h  accompany_decoder_controller.cpp  com_example_ecliptest_MyDest.h  myadudio.cpp
EclipTest/jni/common/: CommonTools.h
EclipTest/res/values/: strings.xml
EclipTest/src/: com_example_ecliptest_MyDest.h
EclipTest/src/com/example/ecliptest/: MainActivity.java  MyDest.java
FfmpegDecoder/: settings.gradle
FfmpegDecoder/app/: build.gradle
FfmpegDecoder/app/src/main/: AndroidManifest.xml
FfmpegDecoder/app/src/main/cpp/: CMakeLists.txt
FfmpegDecoder/app/src/main/cpp/common/: CommonTools.h
FfmpegDecoder/app/src/main/cpp/decoder/: accompany_decoder.cpp  accompany_decoder.h  accompany_decoder_controller.h
FfmpegDecoder/app/src/main/cpp/ffmpeg/include/libavcodec/: avcodec.h  old_codec_ids.h  vda.h  vdpau.h  version.h
FfmpegDecoder/app/src/main/cpp/ffmpeg/include/libavdevice/: version.h
FfmpegDecoder/app/src/main/cpp/ffmpeg/include/libavformat/: avformat.h  avio.h  version.h
FfmpegDecoder/app/src/main/cpp/ffmpeg/include/libavutil/: attributes.h  avconfig.h  avutil.h  channel_layout.h  common.h  cpu.h  frame.h  opt.h  parseutils.h  pixfmt.h  timestamp.h  version.h
FfmpegDecoder/app/src/main/cpp/ffmpeg/include/libswresample/: version.h
FfmpegDecoder/app/src/main/cpp/ffmpeg/include/libswscale/: swscale.h  version.h
FfmpegDecoder/app/src/main/cpp/jni/: native-lib.cpp
FfmpegDecoder/gradle/wrapper/: gradle-wrapper.properties
Flutter/Demo/: .gitignore  pubspec.yaml
Flutter/Demo/android/app/: build.gradle
Flutter/Demo/flutter_app/: pubspec.yaml
Flutter/Demo/flutter_app/android/app/: build.gradle
Flutter/Demo/flutter_app/ios/Runner.xcodeproj/: project.pbxproj
Flutter/Demo/flutter_app/lib/random_word/: RandomWords.dart  RandomWordsState.dart  main.dart
Flutter/Demo/flutter_app/lib/utils/: LogUtils.dart
Flutter/Demo/flutter_app/lib/widget_frame/: AwaitTestWidget.dart  NoMaterialWidget.dart  RefreshTestWidget.dart  WebViewTestWidget.dart  main.dart
Flutter/Demo/flutter_app/yufa/: ConstructorTest.dart
Flutter/Demo/lib/: main_bak.dart
Flutter/Demo/lib/random_word/: RandomWordsState.dart
Flutter/Demo/lib/widget/: CustomAppbarWidget.dart  WebViewTestWidget.dart  main.dart
Flutter/Demo/test/: widget_test.dart
Flutter/Demo/yufa/: YuFa_dynamic.dart
Flutter/FirTest/flutter_fir_test/: README.md  pubspec.yaml
Flutter/FirTest/flutter_fir_test/android/app/: build.gradle
Flutter/FirTest/flutter_fir_test/ios/Runner/: Info.plist
Flutter/FirTest/flutter_fir_test/ios/Runner.xcodeproj/: project.pbxproj
Flutter/FirTest/flutter_fir_test/lib/: RandomWords.dart  RandomWordsState.dart  main.dart  main_bak.dart
Flutter/FirTest/flutter_fir_test/lib/random_word/: RandomWords.dart  RandomWordsState.dart  main.dart
Flutter/FirTest/flutter_fir_test/lib/widget_frame/: NoMaterialWidget.dart  main.dart
Flutter/FirTest/flutter_fir_test/test/: widget_test.dart
Flutter/Flutter_ppt/test_ppt/lib/: heytapMain.dart  sampleStatefulWidget.dart  sampleStatelessWidget.dart
Flutter/ProGsyGithub/onplan/: README.md  pubspec.yaml
Flutter/ProGsyGithub/onplan/android/app/: build.gradle
Flutter/ProGsyGithub/onplan/ios/Runner.xcodeproj/: project.pbxproj
Flutter/ProGsyGithub/onplan/lib/: main.dart
Flutter/ProGsyGithub/onplan/test/: widget_test.dart
Flutter/ProWanAndroid/play_android/: pubspec.yaml
Flutter/ProWanAndroid/play_android/lib/: NavigationPage.dart  main.dart  test.dart
Flutter/ProWanAndroid/play_android/test/: widget_test.dart
LeakCanary/: settings.gradle
LeakCanary/app/: build.gradle
LeakCanary/app/src/main/: AndroidManifest.xml
LeakCanary/gradle/wrapper/: gradle-wrapper.properties
ModulePattern/: .gitignore  README.md  build.gradle  config.gradle  settings.gradle
ModulePattern/CommonLibrary/: build.gradle
ModulePattern/CommonLibrary/src/main/: AndroidManifest.xml
ModulePattern/app/: build.gradle
ModulePattern/app/src/main/: AndroidManifest.xml
ModulePattern/collection/: build.gradle
ModulePattern/collection/src/main/: AndroidManifest.xml
ModulePattern/gradle/wrapper/: gradle-wrapper.properties
ModulePattern/main/: build.gradle
ModulePattern/main/src/main/: AndroidManifest.xml
ModulePattern/movie/: build.gradle
ModulePattern/movie/src/main/: AndroidManifest.xml
Mp3Encoder/: .gitignore  .ninja_deps  .ninja_log  settings.gradle
Mp3Encoder/app/: build.gradle
Mp3Encoder/app/src/main/: AndroidManifest.xml
Mp3Encoder/app/src/main/cpp/: CMakeLists.txt
Mp3Encoder/app/src/main/cpp/encoder/: mp3_encoder.cpp  mp3_encoder.h
Mp3Encoder/gradle/wrapper/: gradle-wrapper.properties
MyNdkTest/: settings.gradle
MyNdkTest/app/: build.gradle
MyNdkTest/app/src/main/: AndroidManifest.xml
MyNdkTest/gradle/wrapper/: gradle-wrapper.properties
flutter_to_delete/: README.md  pubspec.yaml
flutter_to_delete/android/app/: build.gradle
flutter_to_delete/ios/Runner/: Info.plist
flutter_to_delete/ios/Runner.xcodeproj/: project.pbxproj
flutter_to_delete/test/: widget_test.dart
openGl/CopyTest/: settings.gradle
openGl/CopyTest/app/: build.gradle
openGl/CopyTest/gradle/wrapper/: gradle-wrapper.properties
openGl/GLDemo/: settings.gradle
openGl/GLDemo/app/: build.gradle
openGl/GLDemo/gradle/wrapper/: gradle-wrapper.properties
openGl/GLesBook/: .gitignore  settings.gradle
openGl/GLesBook/app/: build.gradle
openGl/GLesBook/chapter11/: build.gradle
openGl/GLesBook/chapter12/: build.gradle
openGl/GLesBook/chapter13/: build.gradle
openGl/GLesBook/gradle/wrapper/: gradle-wrapper.properties
openGl/GLesBook/utils/: build.gradle
openGl/XCode-opengl/01-triangle/01-triangle/: main.cpp  vgl.h
openGl/XCode-opengl/01-triangle/01-triangle.xcodeproj/: project.pbxproj
openGl/XCode-opengl/FirstDemo/: .gitignore
openGl/XCode-opengl/FirstDemo/FirstDemo/: glad.c  main.cpp
openGl/XCode-opengl/FirstDemo/FirstDemo.xcodeproj/: project.pbxproj
(+343 files in other folders)
